plugins {
    id 'java'
    id('org.springframework.boot') version '3.3.4'
    id('io.spring.dependency-management') version '1.1.6'
}

group = 'ru.kraiush'
version = '1.0'
java.sourceCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql:42.7.4'
    implementation 'org.modelmapper:modelmapper:3.2.1'
    implementation('com.fasterxml.jackson.core:jackson-databind:2.14.2')
    implementation('org.slf4j:slf4j-api:2.0.15')
    implementation('org.projectlombok:lombok:1.18.26')
    annotationProcessor('org.projectlombok:lombok:1.18.26')
    implementation('org.apache.commons:commons-lang3')
    testImplementation('org.assertj:assertj-core:3.24.2')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
}

test {
    useJUnitPlatform()
}